# vstplugin_dev

./: .gitignore  CMakeLists.txt  README.md
ggconvolver/: CMakeLists.txt  README.md
ggconvolver/WDL/: LICENSE.txt  README.md  denormal.h  fft.h
ggconvolver/include/: WavUtils.h  celestion_v60_412_room_48kHz_1ch_200ms.h  dbparameter.h  ggccontroller.h  ggcprocessor.h  plugids.h  version.h
ggconvolver/resource/: 210combo_back_U906_44100Hz.data  210combo_center_U906_44100Hz.data  210combo_offaxis_U906_44100Hz.data  412_sm57_off_axis_44100Hz.data  412_sm57_on_axis1_44100Hz.data  412_sm57_on_axis2_44100Hz.data  Info.plist  celestion_v30_48kHz_200ms.data  plug.rc  plug.uidesc
ggconvolver/source/: WavUtils.cpp  dbparameter.cpp  ggccontroller.cpp  ggcfactory.cpp  ggcprocessor.cpp
